--- a/FlipnClick_WebServer.X/mcc-manifest-autosave.yml
+++ b/FlipnClick_WebServer.X/mcc-manifest-autosave.yml
@@ -2,7 +2,7 @@
 
 manifest_file_version: 1.0.0
 project: FlipnClick_WebServer
-creation_date: 2025-04-12T08:58:46.071+01:00[Europe/London]
+creation_date: 2025-04-14T22:21:59.857+01:00[Europe/London]
 operating_system: Windows 10
 mcc_mode: IDE
 mcc_mode_version: v6.25
@@ -17,7 +17,4 @@ mcc_content_registries: https://registry.npmjs.org/
 device_library: {library_class: com.microchip.mcc.harmony.Harmony3Library, name: Harmony
     V3, version: 1.5.5}
 packs: {name: PIC32MZ-EF_DFP, version: 1.4.168}
-modules:
-- {name: core, type: HARMONY, version: v3.15.0}
-- {name: csp, type: HARMONY, version: v3.22.0}
-- {name: net, type: HARMONY, version: v3.13.0}
+modules: []
